save after 1.3.5 -positioning

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   </header>
 
   <!-- hero/jumbotron -->
-  <section>
-    <div>
+  <section class="hero">
+    <div class="hero-form">
       <h3>Get Start Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
-    <!-- Form Elements -->
+      <!-- Form Elements -->
       <form>
         <label for="name">Enter full name:</label>
         <input type="text" placeholder="Your Name" name="name" id="name" />
