--- a/index.html
+++ b/index.html
@@ -150,6 +150,29 @@
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3497.4417061564513!2d-81.35041318456875!3d28.766081384773976!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e772ad020d27d1%3A0x7fd0002783f4c1d5!2s1000%20Primera%20Blvd%2C%20Lake%20Mary%2C%20FL%2032746!5e0!3m2!1sen!2sus!4v1634317508347!5m2!1sen!2sus" 
+      width="400" 
+      height="400" 
+      style="border:0;" 
+      allowfullscreen="" 
+      loading="lazy">
+    </iframe>
+    </div>
+    <div>
+      <h3>Run Buddy</h3>
+      <p>
+        Any questions before signing up?
+        <br />
+        Let us know and we'll be happ to talk to you!
+      </p>
+      <address>55 Main Street <br/>
+        Some Town, Ca <br/>
+        12345<br />
+        P: 555.RUN.BUDZ (555.786.2839)<br/>
+        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+      </address>
+    </div>
   </section>
 
   <!-- footer -->
